<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">WatchBluetooth</string>
    <string name="binded_phone">Currently binded phone</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_headset">Headset</string>
    <string name="bluetooth_phone">Phone</string>
    <string name="cancle">Cancel</string>
    <string name="cancle_pair">Cancel pair</string>
    <string name="conn_device">Connect device</string>
    <string name="connected">Connected</string>
    <string name="disconn_device">Disconnect device</string>
    <string name="disconnected">Disconnected</string>
    <string name="notfound">Not found</string>
    <string name="ok">Ok</string>
    <string name="open_app_conn_watch">Open APP-Connect Watch\10Scan the QR code to bind</string>
    <string name="paired">paired</string>
    <string name="permission_tips">Positioning permission is required for Bluetooth scanning. Do you agree?</string>
    <string name="scanning">Scanning</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="unbind_content_msg">After unbinding,you will not receive\10 phone notifications</string>
    <string name="unbind_phone">unbind</string>
</resources>
